--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-atomicwrites==1.3.0
-attrs==18.2.0
-backcall==0.1.0
-decorator==4.3.2
-ipdb==0.11
-ipython==7.3.0
-ipython-genutils==0.2.0
-jedi==0.13.3
-more-itertools==6.0.0
-parso==0.3.4
-pathlib2==2.3.3
-pexpect==4.6.0
-pickleshare==0.7.5
-pluggy==0.9.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-py==1.8.0
-Pygments==2.3.1
-pytest==4.3.0
-six==1.12.0
-termcolor==1.1.0
-traitlets==4.3.2
-wcwidth==0.1.7
+atomicwrites
+attrs
+backcall
+decorator
+ipdb
+ipython
+ipython-genutils
+jedi
+more-itertools
+parso
+pathlib2
+pexpect
+pickleshare
+pluggy
+prompt-toolkit
+ptyprocess
+py
+Pygments
+pytest
+six
+termcolor
+traitlets
+wcwidth
